codechallenge-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: codechallenge-api-svc
spec:
  selector:
    app: codechallenge-api-1.0
  # type: LoadBalancer
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    # nodePort: 30001
