codechallenge-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: codechallenge-api-ingress
  labels:
    name: codechallenge-api-ingress
spec:
  rules:
  - host: codechallenge-api.test
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: codechallenge-api-svc
            port: 
              number: 80
